[package]
name = "blockk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
lazy_static = "1"
regex = { version = "1.5", default-features = false, features = ["std", "perf"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
